samples/_failures_safe/1761319660_849947_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41151a63.c: In function ‘main’:
./samples/SAFE/__tmp_41151a63.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
